ncc/testsuite/positive/properties.n
class C {
  public virtual X : int { get { 0 } }
  public virtual Y : int { get { 0 } }
  public this () {}
}

class D : C {
  public override X : int { get { 1 } }
  public new Y : int { get { 1 } }
  public this () {}
}

class E { 
  public Goo : string {
    private mutable _goo : string;

    get { _goo }
    set { _goo = value }
  }
  
  public static Foo : int {
    private mutable _foo : int;
  
    get { _foo }
  }

  public this () { Goo = "dd"; }
}

module F {
  public Goo : string {
    private mutable _goo : string;
    protected mutable _goo1 : string; // = "ala";

    get { _goo + _goo1 }
    set { _goo = value; _goo1 = _goo }
  }
}

using Nemerle.IO;

module M {
  Main () : void
  {
    def c = (D () : C);
    printf ("%d %d %d %d\n", c.X, c.Y, D ().X, D ().Y);
    printf ("%s\n", E().Goo);
    printf ("%s\n", F.Goo);
    F.Goo = "bla";
    printf ("%s\n", F.Goo);
  }
}

/*
BEGIN-OUTPUT
1 0 1 1
dd

blabla
END-OUTPUT
*/
